# CodeHealthTool

./: README.md  pyproject.toml
src/codehealth/: __main__.py  cli.py
src/codehealth.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/codehealth/analyzers/: commit_quality.py  dead_code.py
src/codehealth/reporters/: json_reporter.py  text.py
src/codehealth/utils/: git.py
tests/: test_commit_quality.py  test_commit_quality_complex.py  test_commit_quality_realworld.py  test_dead_code.py  test_dead_code_complex.py
tests/fixtures/: commits_complex.txt  commits_sample.txt
tests/fixtures/complex_sample/: __init__.py  main.py  models.py  registry.py  typed.py  visitor.py
tests/fixtures/dead_code_sample/: __init__.py  live.py  tests_module.py
