[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codehealth"
version = "0.1.0"
description = "Dead-code and commit-quality checks for Python projects"
requires-python = ">=3.9"
authors = [{ name = "CodeHealthTool" }]
license = { text = "MIT" }

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
codehealth = "codehealth.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
